# mochi-container

./: Dockerfile  Makefile  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json
sample/: CMakeLists.txt  README.md  client.c  server.c  types.h
thallium-sample/: CMakeLists.txt  README.md  client.cc  server.cc
